--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -503,3 +503,14 @@
   --color-primary-800: rgb(var(--tw-color-primary-800)); /* #1e293b */
   --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0f172a */
 }
+
+
+._orange {
+  color: #F28729;
+}
+
+._white{
+  color: #FFFFFF;
+}
+
+
