--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -12,126 +12,126 @@
 }
 
 @font-face {
-  font-family: 'InterTight Black';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight Black Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight Bold';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight Bold Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-BoldItalic.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight ExtraBold';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight ExtraBold Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-ExtraBoldItalic.ttf') format('truetype');
   font-weight: 800;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight ExtraLight';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight ExtraLight Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-ExtraLightItalic.ttf') format('truetype');
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight Light';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight Light Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight Medium';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight Medium Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight Regular';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight SemiBold';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight SemiBold Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-SemiBoldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'InterTight Thin';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'InterTight Thin Italic';
+  font-family: 'InterTight';
   src: url('/fonts/InterTight-ThinItalic.ttf') format('truetype');
   font-weight: 100;
   font-style: italic;
