--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,15 +9,20 @@
 @tailwind utilities;
 
 body {
-  font-family: 'InterTight', sans-serif;
+  font-family: 'Degarism Studio - Alliance No.2 Light', sans-serif;
+  background-color: #09090D;
 }
 
 h1 {
-  font-family: 'Degarism Studio - Alliance No.2 Light', sans-serif;
+  font-family: 'InterTight', sans-serif;
 }
 
 .alliance-2 {
   font-family: 'Degarism Studio - Alliance No.2 Light', sans-serif !important;
+}
+
+.inter-tight {
+  font-family: 'InterTight Black', sans-serif !important;
 }
 
 p {
