feat: design the button

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,246 +30,13 @@ p {
   font-weight: normal !important;
 }
 
-.clash_display_font {
-  font-family: 'ClashDisplay' !important;
-}
-
-/* header */
-.header_grassmorpshism {
-  background: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(12px);
-}
-
-span.ant-tag {
-  color: black !important;
-  font-family: 'Helvetica Neue' !important;
-  font-size: 1.6vh;
-}
-
-/* welcome images */
-.left-clippath {
-  -webkit-clip-path: polygon(0% 0%, 100% 0, 75% 50%, 100% 100%, 0% 100%);
-  clip-path: polygon(0% 0%, 100% 0, 75% 50%, 100% 100%, 0% 100%);
-}
-
-.right-clippath {
-  -webkit-clip-path: polygon(
-    100% 0,
-    100% 50%,
-    100% 100%,
-    0% 100%,
-    25% 50%,
-    0% 0%
-  );
-  clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 25% 50%, 0% 0%);
-}
-
-.text-red {
-  color: #730d15;
-}
-
-.text-black {
-  color: #0d0d0d;
-}
-
-.ant-modal-content {
-  background: transparent !important;
-  box-shadow: none !important;
-}
-
-/* projects */
-.blue-bg {
-  background-color: #ebf1b4;
-}
-
-/* faq collapsible */
-.ant-collapse-content-box p {
-  font-size: 2vh;
-  line-height: 39px;
-}
-
-.ant-collapse-item.ant-collapse-item-active {
-  background: #730d15 !important;
-  font-family: 'Helvetica Neue' !important;
-}
-
-.ant-collapse-item.ant-collapse-item-active .ant-collapse-header {
-  color: white !important;
-  font-family: 'Helvetica Neue' !important;
-}
-
-.ant-collapse-item.ant-collapse-item-active
-  .ant-collapse-header
-  .ant-collapse-arrow {
-  color: white !important;
-}
-
-.ant-collapse-item.ant-collapse-item-active p {
-  color: #eadbdc !important;
-}
-
-.ant-collapse-item.ant-collapse-item-active
-  .ant-collapse-header
-  .ant-collapse-arrow
-  svg {
-  fill: white !important;
-}
-
-span.ant-collapse-header-text {
-  font-weight: medium !important;
-  font-family: 'Helvetica Neue' !important;
-}
-
-.ant-collapse-item {
-  background: #f1e7e8 !important;
-}
-
-/* tags styles */
-.tag {
-  font-size: 2vh;
-}
-
-/* avatar groups */
-span.ant-avatar.ant-avatar-circle.css-dev-only-do-not-override-12jzuas {
-  height: 45px;
-  width: 45px;
-  justify-items: center;
-  justify-content: center;
-  padding: 5px;
-  background: #ebf1b4 !important;
-  color: black !important;
-  font-weight: 500;
-}
-
-a:hover {
-  color: black !important;
-}
-
-/* tabs */
-
-.ant-tabs-nav {
-  border: 1px solid #ffffff !important;
-  border-radius: 5px;
-  border-bottom: none !important;
-  padding: 0 5px;
-  justify-content: space-between !important;
-}
-
-.ant-tabs-nav-wrap {
-  padding-left: 19px !important;
-  border-bottom: 1px solid white !important;
-  font-family: 'Helvetica Neue' !important;
-}
-
-.ant-tabs-nav-list {
-  width: 100%;
-  justify-content: space-between !important;
-}
-.ant-tabs-tab {
-  font-size: 2vh !important;
-}
-
-.ant-tabs .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
-  color: white !important;
-}
-
-.ant-tabs .ant-tabs-tab .ant-tabs-tab-btn:hover,
-.ant-tabs .ant-tabs-tab:hover {
-  color: #c2868b !important;
-}
-.ant-tabs .ant-tabs-tab.ant-tabs-tab-active:hover {
-  color: white !important;
-}
-
-.ant-tabs .ant-tabs-tab {
-  width: 213px !important;
-  align-items: center !important;
-  justify-content: center;
-}
-
-::selection {
-  background-color: #730d1553 !important; /* Set the background color for text selection */
-  color: #333 !important; /* Set the text color for text selection */
-}
-
-.ant-tabs .ant-tabs-tab.ant-tabs-tab-active {
-  background-color: #730d15 !important;
-  width: 213px !important;
-  border-radius: 100px !important;
-  align-items: center !important;
-  justify-content: center;
-}
-
-.ant-tabs .ant-tabs-tab {
-  background-color: #e5e5e5 !important;
-  border-radius: 100px !important;
-  align-items: center !important;
-  justify-content: center;
-}
-
-.ant-tabs-nav div {
-  background-color: transparent !important;
-}
-
-/* profile image  */
-.profile-clopped-object {
-  -webkit-clip-path: circle(50% at 67% 21%);
-  clip-path: circle(50% at 67% 21%);
-}
-
-.mobile-header {
-  background: rgba(255, 255, 255, 0.95);
-  backdrop-filter: blur(7.5px);
-  -webkit-backdrop-filter: blur(7.5px);
-}
-
-.ant-tabs-nav-list {
-  width: 40vw !important;
-  margin: auto !important;
-}
-
-input.ant-input {
-  background: #f1e7e8 !important;
-}
-
-.mapboxgl-ctrl-attrib-inner {
-  display: none !important;
-}
-
-.profile-content h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 3vh;
-  margin: 2.5vh 0;
-  text-transform: capitalize;
-}
-
-/* profile-content lists */
-.profile-content ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  margin-left: 2vw;
-}
-
-.profile-content p {
-  margin: 1vh 0;
-}
-
-.profile-content a {
-  color: #730d15;
-  text-decoration: underline;
-}
-
-.profile-content a:hover {
-  color: #730d15 !important;
+.button-gradient {
+  /* linear gradient of three colors  */
+  background: linear-gradient(260deg, #19242C 0%, #09090D 53%, #1C110E 100%);
+  border: none;
+  color: white;
+  text-align: center;
   text-decoration: none;
-}
-
-.profile-content ul li {
-  margin: 1vh 0;
-  list-style-type: disc;
+  display: inline-block;
+  cursor: pointer;
 }
