--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Degarism Studio - Alliance No.2 Light', sans-serif;
-  background-color: #09090D;
+  background-color: #09090d;
 }
 
 h1 {
@@ -32,11 +32,11 @@ p {
 
 .button-gradient {
   /* linear gradient of three colors  */
-  background: linear-gradient(260deg, #19242C 0%, #09090D 53%, #1C110E 100%);
-  border: none;
+  background: linear-gradient(260deg, #19242c 0%, #09090d 53%, #1c110e 100%);
   color: white;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
+  border: 1px solid #173440;
 }
