--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -6,7 +6,8 @@
 
 @font-face {
   font-family: 'Degarism Studio - Alliance No.2 Light';
-  src: url('/fonts/Degarism\ Studio\ -\ Alliance\ No.2\ Light.otf') format('opentype');
+  src: url('/fonts/Degarism\ Studio\ -\ Alliance\ No.2\ Light.otf')
+    format('opentype');
   font-weight: normal;
   font-style: normal;
 }
@@ -136,5 +137,3 @@
   font-weight: 100;
   font-style: italic;
 }
-
-
