--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,10 +43,17 @@ p {
 
 /* header */
 .header_grassmorpshism {
-  background: rgba(0,0,0,.1);
-  box-shadow: 0 0 20px 0 hsla(0,0%,100%,.1);
+  background: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px 0 hsla(0, 0%, 100%, 0.1);
   -webkit-backdrop-filter: blur(20px);
   border-radius: 100px;
-  border: 1px solid var(--stroke,hsla(0,0%,100%,.2));
+  border: 1px solid var(--stroke, hsla(0, 0%, 100%, 0.2));
   backdrop-filter: blur(20px);
+}
+
+.welcome-bg {
+  background-image: url('/images/welcome-background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
