fix: font issues

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -5,8 +5,8 @@
 */
 
 @font-face {
-  font-family: 'Degarism Studio - Alliance No.2 Light';
-  src: url('/fonts/Degarism\ Studio\ -\ Alliance\ No.2\ Light.otf')
+  font-family: 'Alliance';
+  src: url('/fonts/Alliance.otf')
     format('opentype');
   font-weight: normal;
   font-style: normal;
