--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,3 +101,8 @@ span.ant-collapse-header-text {
 .ant-collapse-expand-icon {
   color: white !important;
 }
+
+
+.ant-steps-item.ant-steps-item-finish .ant-steps-item-title, .ant-steps-item.ant-steps-item.ant-steps-item-finish .ant-steps-item-description {
+  opacity: .6 !important;
+}
