--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -6,8 +6,7 @@
 
 @font-face {
   font-family: 'Alliance';
-  src: url('/fonts/Alliance.otf')
-    format('opentype');
+  src: url('/fonts/Alliance.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
