--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,12 +43,25 @@ p {
 
 /* header */
 .header_grassmorpshism {
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 20px 0 hsla(0, 0%, 100%, 0.1);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 100px;
-  border: 1px solid var(--stroke, hsla(0, 0%, 100%, 0.2));
-  backdrop-filter: blur(20px);
+  background: rgba(0, 0, 0, 0.1) !important;
+  box-shadow: 0 0 20px 0 hsla(0, 0%, 100%, 0.1) !important;
+  -webkit-backdrop-filter: blur(20px) !important;
+  border-radius: 100px !important;
+  border: 1px solid var(--stroke, hsla(0, 0%, 100%, 0.2)) !important;
+  backdrop-filter: blur(20px) !important;
+}
+
+
+.ant-modal-content {
+  background: rgba(0, 0, 0, 0.1) !important;
+  box-shadow: 0 0 20px 0 hsla(0, 0%, 100%, 0.1) !important;
+  -webkit-backdrop-filter: blur(20px) !important;
+  border: 1px solid var(--stroke, hsla(0, 0%, 100%, 0.2)) !important;
+  backdrop-filter: blur(20px) !important;
+}
+
+.ant-modal-content svg {
+  color: white;
 }
 
 .welcome-bg {
