--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,3 +128,10 @@ span.ant-collapse-header-text {
 .ant-slider.ant-slider-disabled .ant-slider-rail {
   background-color: #9d9d9e !important;
 }
+
+.ant-select-selector {
+  background: #09090d !important;
+  color: #9D9D9E !important;
+  font-size: 1.7vh !important;
+  border: 1px solid #1C1C1F !important;
+}
