--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,6 @@ p {
   backdrop-filter: blur(20px) !important;
 }
 
-
 .ant-modal-content {
   background: rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0 0 20px 0 hsla(0, 0%, 100%, 0.1) !important;
@@ -131,7 +130,7 @@ span.ant-collapse-header-text {
 
 .ant-select-selector {
   background: #09090d !important;
-  color: #9D9D9E !important;
+  color: #9d9d9e !important;
   font-size: 1.7vh !important;
-  border: 1px solid #1C1C1F !important;
+  border: 1px solid #1c1c1f !important;
 }
