feat: implement job card

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -133,4 +133,5 @@ span.ant-collapse-header-text {
   color: #9d9d9e !important;
   font-size: 1.7vh !important;
   border: 1px solid #1c1c1f !important;
+  font-family: 'Alliance', sans-serif !important;
 }
