--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -144,7 +144,10 @@ span.ant-collapse-header-text {
 }
 
 /* components/ScrollImage.module.css */
-.ant-steps .ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-tail::after {
+.ant-steps
+  .ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-tail::after {
   background-color: #348687 !important;
 }
 
