--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 h1 {
-  color: #09090D;
+  color: #09090d;
 }
 
 p {
@@ -83,14 +83,14 @@ p {
 
 /** steps */
 .ant-steps-item-title {
-  color: #09090D !important;
+  color: #09090d !important;
   font-size: 3vh !important;
   font-weight: bold;
   font-family: 'WhyteInktrap', sans-serif !important;
 }
 
 .ant-steps-item-description {
-  color: #09090D !important;
+  color: #09090d !important;
   font-size: 1.6vh !important;
   font-family: 'InterTight', sans-serif !important;
 }
@@ -100,7 +100,7 @@ p {
 }
 
 .ant-collapse-item {
-  background: #E5E5E5;
+  background: #e5e5e5;
   margin: 2.5vh 0;
   border: none !important;
   border-radius: 15px !important;
@@ -117,7 +117,7 @@ p {
 }
 
 span.ant-collapse-header-text {
-  color: #09090D;
+  color: #09090d;
   font-family: 'WhyteInktrap', sans-serif !important;
   font-size: 3vh;
   font-weight: 600;
@@ -143,13 +143,13 @@ span.ant-collapse-header-text {
 }
 
 .ant-collapse-content-box {
-  color: #09090D !important;
+  color: #09090d !important;
   font-size: 1.7vh;
   font: medium;
 }
 
 .ant-collapse-expand-icon {
-  color: #09090D !important;
+  color: #09090d !important;
 }
 
 .ant-steps-item.ant-steps-item-finish .ant-steps-item-title,
